added new files

--- a/Assignment1bs.html
+++ b/Assignment1bs.html
@@ -4,6 +4,12 @@
         <link rel="stylesheet" href="dist/css/bootstrap.css">
     </head>
     <body>
-        
+        <table width="100%" border="1px">
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Address</th>
+            </tr>
+        </table>
     </body>
 </html>
