--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
          <br>
          
         <!-- section six starts here -->
-         
+
         <!-- section six ends here -->
+
+        <!-- section 8 starts here -->
+        <!-- section 8 ends here -->
+
 
     </body>
 </html>
